<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.walrusone</groupId>
    <artifactId>SkyWarsReloaded</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <properties>
        <revision>6.0.0-SNAPSHOT-1</revision>
        <bukkit.version>1.21.11</bukkit.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>SkyWarsReloadedCore</module>
        <module>slime-asp</module>
        <module>v1_21_R7</module>
        <module>v26_1</module>
        <module>skywars-assembly</module>
    </modules>

    <profiles>
        <profile>
            <id>modern-java</id>
            <properties>
                <maven.compiler.source>25</maven.compiler.source>
                <maven.compiler.target>25</maven.compiler.target>
            </properties>
            <activation>
                <jdk>[25,)</jdk>
            </activation>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.walrusone</groupId>
                <artifactId>SkyWarsReloadedCore</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <!-- Optional Flatten plugin, if you're still using it -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>